--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
 		</style>
 	</head>
 	<body>
-		<h1>TT-RSS Cheacker Settings</h1><br><br>
+		<h1>TT-RSS Checker Settings</h1><br><br>
 
 		<label for="domain">Domain:</label><br>
 		<input type="text" id="domain" value="rss.example.com"><br><br>
@@ -25,7 +25,7 @@
 		<label for="interval">Check interval: How many min before the number of unread feed item is checked agian</label><br>
 		<input type="text" id="interval" value="5"><br><br>
 		<div>
-			<p>After saving the new settings the extention will request permision for the relevant domain. This is used for requesting the number of unread feed items only.</p>
+			<p>After saving the new settings the extension will request permision for the relevant domain. This is used for requesting the number of unread feed items only.</p>
 		</div>
 		<input type="button" id="save_me" value="Update Settings">
 	</body>
